--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Generate GIFs
+name: Generate 720p GIFs
 
 on: [push]
 
@@ -21,21 +21,3 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           path: gifs
-  transcode-360:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: FedericoCarboni/setup-ffmpeg@v2
-        id: setup-ffmpeg
-      - name: Run script file
-        run: |
-         chmod +x script-360.sh
-         ./script-360.sh
-        shell: bash
-      - name: Temp folder
-        run: |
-          mkdir gifs-360
-          mv *.gif gifs-360
-      - uses: actions/upload-artifact@v3
-        with:
-          path: gifs-360
