--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,11 @@
-name: Generate 720p GIFs
+name: Generate GIFs
 
-on: [push]
+on:
+  workflow_call:
+    inputs:
+      resolution:
+        required: true
+        type: string
 
 jobs:
   transcode:
@@ -12,7 +17,7 @@ jobs:
       - name: Run script file
         run: |
          chmod +x script.sh
-         ./script.sh
+         ./script.sh ${{ inputs.resolution }}
         shell: bash
       - name: Temp folder
         run: |
