--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,8 @@ jobs:
           mkdir gifs
           mv *.gif gifs
       - uses: Roang-zero1/github-create-release-action@v2
+        with:
+          created_tag: '${{ inputs.resolution }} ${{ github.sha }}'
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
       - uses: actions/upload-artifact@v3
