--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,10 @@ jobs:
         run: |
           mkdir gifs
           mv *.gif gifs
+      - name: tasks
+        run: |
+          echo ${{ github.ref }} > ref.txt
+          cat ref.txt
       - name: Release
         uses: fnkr/github-action-ghr@v1
         if: startsWith(github.ref, 'refs/tags/')
