--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,3 +43,8 @@ jobs:
           GHR_COMPRESS: zip
           GHR_PATH: gifs
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
+      - uses: Roang-zero1/github-upload-release-artifacts-action@v3.0.0
+        with:
+          args: ./artifacts
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
