--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
       - uses: Roang-zero1/github-upload-release-artifacts-action@v3.0.0
         with:
-          args: ./artifacts
+          created_tag: gif
+          args: gifs
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
