--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,18 +31,8 @@ jobs:
       - name: Temp folder
         run: |
           mkdir gifs
-          mv *.gif gifs
-      - name: tasks
-        run: |
-          echo ${{ github.ref }} > ref.txt
-          cat ref.txt
-      - name: Release
-        uses: fnkr/github-action-ghr@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        env:
-          GHR_COMPRESS: zip
-          GHR_PATH: gifs
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          zip gifki.zip *.gif
+          mv gifki.zip gifs
       - uses: Roang-zero1/github-upload-release-artifacts-action@v3.0.0
         with:
           created_tag: gif
