--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,12 @@ jobs:
           mkdir gifs
           zip gifki.zip *.gif
           mv gifki.zip gifs
+      - name: Create release
+        uses: Roang-zero1/github-create-release-action@v3
+        with:
+          created_tag: 'v${{ inputs.resolution }}'
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
       - uses: Roang-zero1/github-upload-release-artifacts-action@v3.0.0
         with:
           created_tag: gif
