--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,14 @@ jobs:
           mkdir gifs
           zip ${{ github.workflow_sha }}.zip *.gif
           mv ${{ github.workflow_sha }}.zip gifs
-      - uses: Roang-zero1/github-upload-release-artifacts-action@v3.0.0
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          created_tag: gif
-          args: gifs
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          files: gifs/${{ github.workflow_sha }}.zip
+#      - uses: Roang-zero1/github-upload-release-artifacts-action@v3.0.0
+#        with:
+#          created_tag: gif
+#          args: gifs
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.TOKEN }}
