если оно опять обосрется хотя бы не так обидно будет

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,3 +39,6 @@ jobs:
           args: gifs
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
+      - uses: actions/upload-artifact@v3
+        with:
+          path: gifs
