--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Download from S3
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.s3_key_id }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.s3_secret_key }}
-          AWS_DEFAULT_REGION: ru-central1
-          AWS_EC2_METADATA_DISABLED: true
-        run: |
-          aws s3 sync ${{ secrets.bucket_name }} . --endpoint-url=https://storage.yandexcloud.net
+#      - name: Download from S3
+#        env:
+#          AWS_ACCESS_KEY_ID: ${{ secrets.s3_key_id }}
+#          AWS_SECRET_ACCESS_KEY: ${{ secrets.s3_secret_key }}
+#          AWS_DEFAULT_REGION: ru-central1
+#          AWS_EC2_METADATA_DISABLED: true
+#        run: |
+#          aws s3 sync ${{ secrets.bucket_name }} . --endpoint-url=https://storage.yandexcloud.net
       - uses: FedericoCarboni/setup-ffmpeg@v2
         id: setup-ffmpeg
       - name: Run script file
@@ -31,7 +31,16 @@ jobs:
       - name: Temp folder
         run: |
           mkdir gifs
-          mv *.gif gifs
-      - uses: actions/upload-artifact@v3
+          zip ${{ github.workflow_sha }}.zip *.gif
+          mv ${{ github.workflow_sha }}.zip gifs
+      - uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          path: gifs
+          repo_token: "${{ secrets.TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "${{ inputs.resolution }}"
+          files: gifs/${{ github.workflow_sha }}.zip
+
+#      - uses: actions/upload-artifact@v3
+#        with:
+#          path: gifs
