--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.TOKEN }}"
-          automatic_release_tag: "latest"
+          automatic_release_tag: "${{ inputs.resolution }}"
           prerelease: true
           title: "${{ inputs.resolution }}"
           files: gifs/${{ github.workflow_sha }}.zip
