--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           mv ${{ github.workflow_sha }}.zip gifs
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          repo_token: "${{ secrets.TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: false
           title: "${{ inputs.resolution }}"
