--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,13 +33,8 @@ jobs:
       - name: Pack gifs
         run: |
           mkdir gifs
-          zip ${{ github.workflow_sha }}.zip *.gif
-          mv ${{ github.workflow_sha }}.zip gifs
-      - name: Release
-        uses: "marvinpinto/action-automatic-releases@latest"
+          mv *.gif gifs
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: false
-          title: "${{ inputs.resolution }}"
-          files: gifs/${{ github.workflow_sha }}.zip
+          path: gifs
